# flight-weather-heatmap

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
logic/: launch_canx_prediction.py
wasp/: manage.py
wasp/data/: 2024_launch_attempts.csv  daily_base_weather_data.csv  launch_criteria.yml
wasp/data/example_data/: example_data.csv
wasp/heatmap/: __init__.py  apps.py  models.py  monthly_base_weather_data.csv  plotly_app.py  tests.py  urls.py  views.py
wasp/heatmap/API/: APITest.py  aircrafts.py  backendAPI.py
wasp/heatmap/migrations/: 0001_initial.py  0002_rename_precipitation_weather_rain_and_more.py
wasp/heatmap/templates/: parsing_functions.py
wasp/heatmap/templates/heatmap/: index.html
wasp/prediction/: __init__.py  launch_canx_prediction.py
wasp/wasp/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
wasp/wasp/django_tests/: test_heatmap.py
