[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "bootstrap4",
    "bs4",
    "colour",
    "dash",
    "dash_bootstrap_components",
    "dash_core_components",
    "dash_html_components",
    "django",
    "django-bootstrap-v5",
    "django-plotly-dash",
    "dpd_static_support",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "plotly-calplot",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
    "scipy",
    "setuptools",
    "Werkzeug"
]

